# multiscale-spatial-image

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  itk_helper.py  multiscale_spatial_image.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  spatial_image_multiscale.py  test_spatial_image_multiscale.py
.github/: copilot-instructions.md
.github/workflows/: notebook-test.yml  test.yml
examples/: ConvertITKImage.ipynb  ConvertImageioImageResource.ipynb  ConvertPyImageJDataset.ipynb  ConvertTiffFile.ipynb  HelloMultiscaleSpatialImageWorld.ipynb
multiscale_spatial_image/: __about__.py  __init__.py  _docs.py  multiscale_spatial_image.py  to_multiscale.py  utils.py
multiscale_spatial_image/operations/: __init__.py  operations.py
multiscale_spatial_image/to_multiscale/: __init__.py  _dask_image.py  _itk.py  _support.py  _xarray.py  itk_image_to_multiscale.py  to_multiscale.py
test/: _data.py  conftest.py  test_multiscale_spatial_image.py  test_ngff_validation.py  test_operations.py  test_spatial_image_multiscale.py  test_to_multiscale.py  test_to_multiscale_dask_image.py  test_to_multiscale_itk.py  test_to_multiscale_xarray.py  test_utils.py
