[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiscale_spatial_image"
description = "Generate a multiscale, chunked, multi-dimensional spatial image data structure that can be serialized to OME-NGFF."
authors = [{name = "Matt McCormick", email = "matt.mccormick@kitware.com"}]
readme = "README.md"
license = {file = "LICENSE"}
home-page = "https://github.com/spatial-image/multiscale-spatial-image"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
   ]
keywords = [
    "itk",
    "ngff",
    "ome",
    "zarr",
    "dask",
    "imaging",
    "visualization",
]
dynamic = ["version"]

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "dask",
    "xarray",
    "xarray-datatree>=0.0.5",
    "spatial_image>=0.2.1",
]

[project.urls]
Home = "https://github.com/spatial-image/multiscale-spatial-image"
Source = "https://github.com/spatial-image/multiscale-spatial-image"
Issues = "https://github.com/spatial-image/multiscale-spatial-image"

[project.optional-dependencies]
test = [
    "itk-filtering>=5.3.0",
    "dask_image",
    "jsonschema",
    "pooch",
    "pytest",
    "pytest-mypy",
    "fsspec",
    "ipfsspec",
    "urllib3",
    "nbmake",
    "zarr",
]

itk = [
    "itk-filtering>=5.3.0",
]
dask-image = [
    "dask-image",
]

[tool.black]
line-length = 88

[tool.hatch.version]
path = "multiscale_spatial_image/__about__.py"
